# Data-science-salary-projections

./: README.md  pyproject.toml
data_science_projection/: data_EDA.ipynb  data_cleaning.py  model.ipynb
data_science_projection/FlaskAPI/: app.py  data_input.py  request.py  wsgi.py
data_science_projection/FlaskAPI/models/: model_file.p
data_science_projection/data/: glassdoor_eda.csv  glassdoor_salary_cleaned.csv
