[tool.poetry]
name = "data-science-projection"
version = "0.1.0"
description = ""
authors = ["franco guzman <francorjuela04@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ipykernel = "^6.29.5"
selenium = "^4.29.0"
pandas = "^2.2.3"
matplotlib = "^3.10.1"
seaborn = "^0.13.2"
wordcloud = "^1.9.4"
nltk = "^3.9.1"
scikit-learn = "^1.6.1"
statsmodels = "^0.14.4"
flask = "^3.1.0"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
